fixed misialignments of #txn-panel on small screens

--- a/src/Trading.css
+++ b/src/Trading.css
@@ -169,8 +169,9 @@
     #txn-panel {
         grid-row: 3;
         grid-column: 1 / span 2;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: repeat(2, calc((100% - .4rem) / 2));
         grid-template-rows: 2.5rem auto 2.5rem;
+        gap: 1rem .4rem;
     }
 }
 
